--- a/css/style.css
+++ b/css/style.css
@@ -701,3 +701,8 @@ a:focus {
     Thanks for reading. I hope you enjoyed it at least as much as I enjoyed writing it
     for you.
 */
+
+
+.step ol {
+    list-style: inherit;
+}
